--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -72,7 +72,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.10dev, 2020/02/12}
+\date{Version 1.10, 2020/04/30}
 
 \maketitle
 
@@ -1198,11 +1198,11 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item forthcoming (v. 1.10):
+\item 2020/04/30 (v. 1.10):
 	\begin{itemize}
-		\item Do not increment session topic counter for cancelled sessions
-and breaks.
+		\item Do not increment session topic counter for cancelled sessions and breaks.
 		\item Add session option \joption{topicnumber} to reset topic number in draft mode.
+		\item Recode this manual in utf8.
 	\end{itemize}
 \item 2020/02/04 (v. 1.9):
 	\begin{itemize}
