--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -23,8 +23,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2020/02/12}
-\def\fileversion{1.10dev}
+\def\filedate{2020/04/30}
+\def\fileversion{1.10}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
