--- a/README
+++ b/README
@@ -68,9 +68,10 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.10 (forthcoming): - Do not increment session topic counter for cancelled sessions
+* V. 1.10 (2020-02-30):  - Do not increment session topic counter for cancelled sessions
                            and breaks.
                          - Add session option topicnumber to reset topic number in draft mode.
+                         - Recode manual in utf8.
 
 * V. 1.9 (2020-02-04):   - Allow \SetBeamerFrameBreak within SessionBlock.
                          - Fix \SetAutoOffset at first session and add optional argument
