--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -725,7 +725,7 @@
         }%
     }%
     \ifbool{uncoveredlist}{%
-      \begin{description}[+(1)->][\lecprogramlistindent]
+      \begin{description}[<+(1)->][\lecprogramlistindent]
     }{%
       \begin{description}[\lecprogramlistindent]
     }
