Correctly initialize pressession counter.

--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -1337,7 +1337,8 @@ the \jslp\ style files. Thanks, Dominik.
 \begin{itemize}
 \item forthcoming (v. 1.11):
 	\begin{itemize}
-		\item Allow for customization of program list (see sec.~\ref{sec:listcust}).
+		\item Allow for customization of program and presentation lists (see sec.~\ref{sec:listcust}).
+		\item Correctly set first session in presentation list.
 	\end{itemize}
 \item 2020/04/30 (v. 1.10):
 	\begin{itemize}
